# mux-proxy

./: .gitignore  Cargo.toml
dashboard/: app.js  index.html  styles.css
migrations/: 001_init.sql  002_add_channel_kind.sql  003_bigint_ids.sql  004_add_rpm_limit.sql  005_anthropic_rewrite_rules.sql  006_api_keys_allowed_models.sql  007_split_cache_creation_5m_1h.sql  008_upstream_key_overrides.sql
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs
src/admin/: anthropic_rules.rs  errors.rs  export.rs  geoip.rs  keys.rs  mod.rs  pricing.rs  query.rs  routes.rs  stats.rs  timeseries.rs  upstream.rs  usage.rs  ws.rs
src/auth/: key_cache.rs  mod.rs  singleflight.rs
src/billing/: mod.rs  pricing.rs  snapshot_version.rs  spend_cache.rs  usage_writer.rs
src/breaker/: mod.rs
src/channels/: mod.rs
src/channels/anthropic/: billing_hook.rs  error_sanitize.rs  gzip_passthrough.rs  handler.rs  header_case.rs  key_pool.rs  mod.rs  model_restore.rs  model_splice.rs  request_strip.rs  sse_tee.rs  upstream_client.rs  upstream_key.rs
src/channels/copilot/: breaker.rs  direct.rs  handler.rs  headers.rs  key_pool.rs  mod.rs  model_map.rs  ratelimit_headers.rs  request_xform.rs  response_xform.rs  session_token.rs  sse.rs  upstream_key.rs  web_search.rs
src/concurrency/: limiter.rs  mod.rs
src/dashboard/: mod.rs
src/db/: anthropic_rules.rs  errors.rs  keys.rs  mod.rs  pool.rs  schema.rs  stats.rs  upstream.rs  usage.rs
src/http/: error_resp.rs  mod.rs  router.rs  v1.rs
src/http/middleware/: admin_auth.rs  auth.rs  host_guard.rs  mod.rs  quota.rs  rate_limit.rs  trace.rs
src/shared/: breaker.rs  generic_errors.rs  ids.rs  json.rs  leak_re.rs  line_codec.rs  mod.rs  model_field.rs  sse_event.rs
src/util/: bytes_splice.rs  inflight.rs  mod.rs  retry.rs
tests/: anthropic_handler.rs
